// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Message should add message to specify chat 1`] = `
Object {
  "addMessage": Object {
    "content": "Hello World",
    "id": "5",
  },
}
`;

exports[`Add Message should add message to specify chat 2`] = `
Object {
  "chat": Object {
    "id": "1",
    "lastMessage": Object {
      "content": "Hello World",
      "id": "5",
    },
  },
}
`;
